@@ -12,19 +12,71 @@
 
 public partial class MainWindow {
     
+    private Gtk.Action File;
+    
+    private Gtk.Action Quit;
+    
+    private Gtk.VBox vbox1;
+    
+    private Gtk.MenuBar menubar1;
+    
+    private Gtk.TextView textview1;
+    
+    private Gtk.Statusbar statusbar1;
+    
     protected virtual void Build() {
         Stetic.Gui.Initialize();
         // Widget MainWindow
-        this.Events = ((Gdk.EventMask)(0));
+        Gtk.UIManager w1 = new Gtk.UIManager();
+        Gtk.ActionGroup w2 = new Gtk.ActionGroup("Default");
+        this.File = new Gtk.Action("File", Mono.Unix.Catalog.GetString("File"), null, null);
+        this.File.ShortLabel = Mono.Unix.Catalog.GetString("File");
+        w2.Add(this.File, null);
+        this.Quit = new Gtk.Action("Quit", Mono.Unix.Catalog.GetString("_Quit"), null, "gtk-quit");
+        this.Quit.ShortLabel = Mono.Unix.Catalog.GetString("_Quit");
+        w2.Add(this.Quit, null);
+        w1.InsertActionGroup(w2, 0);
+        this.AddAccelGroup(w1.AccelGroup);
         this.Name = "MainWindow";
         this.Title = Mono.Unix.Catalog.GetString("MainWindow");
         this.WindowPosition = ((Gtk.WindowPosition)(4));
+        // Container child MainWindow.Gtk.Container+ContainerChild
+        this.vbox1 = new Gtk.VBox();
+        this.vbox1.Name = "vbox1";
+        this.vbox1.Spacing = 6;
+        // Container child vbox1.Gtk.Box+BoxChild
+        w1.AddUiFromString("<ui><menubar name='menubar1'><menu action='File'><menuitem action='Quit'/></menu></menubar></ui>");
+        this.menubar1 = ((Gtk.MenuBar)(w1.GetWidget("/menubar1")));
+        this.menubar1.Name = "menubar1";
+        this.vbox1.Add(this.menubar1);
+        Gtk.Box.BoxChild w3 = ((Gtk.Box.BoxChild)(this.vbox1[this.menubar1]));
+        w3.Position = 0;
+        w3.Expand = false;
+        w3.Fill = false;
+        // Container child vbox1.Gtk.Box+BoxChild
+        this.textview1 = new Gtk.TextView();
+        this.textview1.CanFocus = true;
+        this.textview1.Name = "textview1";
+        this.vbox1.Add(this.textview1);
+        Gtk.Box.BoxChild w4 = ((Gtk.Box.BoxChild)(this.vbox1[this.textview1]));
+        w4.Position = 1;
+        // Container child vbox1.Gtk.Box+BoxChild
+        this.statusbar1 = new Gtk.Statusbar();
+        this.statusbar1.Name = "statusbar1";
+        this.statusbar1.Spacing = 6;
+        this.vbox1.Add(this.statusbar1);
+        Gtk.Box.BoxChild w5 = ((Gtk.Box.BoxChild)(this.vbox1[this.statusbar1]));
+        w5.Position = 2;
+        w5.Expand = false;
+        w5.Fill = false;
+        this.Add(this.vbox1);
         if ((this.Child != null)) {
             this.Child.ShowAll();
         }
-        this.DefaultWidth = 400;
+        this.DefaultWidth = 442;
         this.DefaultHeight = 300;
         this.Show();
         this.DeleteEvent += new Gtk.DeleteEventHandler(this.OnDeleteEvent);
+        this.Quit.Activated += new System.EventHandler(this.OnQuitActivated);
     }
 }
