@@ -1,3 +1,10 @@
+2007-06-11  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
+	* MonodocEditor/MainWindow.cs, MonodocEditor/MonodocEditor.mdp,
+	  MonodocEditor/gtk-gui/MainWindow.cs,
+	  MonodocEditor/gtk-gui/gui.stetic: Added a Menubar, Status Bar to
+	  app.
+
 2007-05-31  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
 	* MonodocEditor/AssemblyInfo.cs, MonodocEditor/Driver.cs,
